adding english resume, modifying the percentage to actual text, removing progress bar to a hr

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -521,6 +521,13 @@ img {
   background-color: var(--first-color-lighter);
 }
 
+hr{
+  border: none;
+  height: 5px;
+  background-color: var(--first-color);
+  margin-bottom: var(--mb-1-5);
+}
+
 .skills__percentage{
   display: block;
   background-color: var(--first-color);
